# titiler-cmr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dockerignore  README.md  benchmark.json  docker-compose.yml  index.html  latest  mkdocs.yml  pyproject.toml  release-please-config.json  versions.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: release---deploy-vx-x-x-to-staging.md  release-checklist.md
.github/workflows/: benchmark.yml  ci.yml  conventional-commits-prs.yml  deploy-dev.yml  deploy.yml  docs.yml  generate_env_file.py  release-please.yml  security.yml
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/contributing/: index.html
0.1.2/release-notes/: index.html
0.1.2/search/: search_index.json
0.1.3/: 404.html  index.html  sitemap.xml
0.1.3/contributing/: index.html
0.1.3/release-notes/: index.html
0.1.3/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/contributing/: index.html
0.2.0/release-notes/: index.html
0.2.0/search/: search_index.json
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/contributing/: index.html
0.3.0/release-notes/: index.html
0.3.0/search/: search_index.json
0.3.1/: 404.html  index.html  sitemap.xml
0.3.1/contributing/: index.html
0.3.1/release-notes/: index.html
0.3.1/search/: search_index.json
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/architecture/: index.html
1.0.0/compatibility/: index.html
1.0.0/contributing/: index.html
1.0.0/migration/: index.html
1.0.0/release-notes/: index.html
1.0.0/search/: search_index.json
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/architecture/: index.html
1.0.1/compatibility/: index.html  tiling_results-11-24-2025.parquet
1.0.1/contributing/: index.html
1.0.1/migration/: index.html
1.0.1/release-notes/: index.html
1.0.1/search/: search_index.json
1.0.2/: 404.html  index.html  sitemap.xml
1.0.2/architecture/: index.html
1.0.2/compatibility/: index.html
1.0.2/contributing/: index.html
1.0.2/migration/: index.html
1.0.2/release-notes/: index.html
1.0.2/search/: search_index.json
1.0.3/: 404.html  index.html  sitemap.xml
1.0.3/architecture/: index.html
1.0.3/compatibility/: index.html
1.0.3/contributing/: index.html
1.0.3/migration/: index.html
1.0.3/release-notes/: index.html
1.0.3/search/: search_index.json
1.0.4/: 404.html  index.html  sitemap.xml
1.0.4/architecture/: index.html
1.0.4/compatibility/: index.html
1.0.4/contributing/: index.html
1.0.4/conventional-commits/: index.html
1.0.4/migration/: index.html
1.0.4/release-notes/: index.html
1.0.4/search/: search_index.json
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/architecture/: index.html
1.1.0/compatibility/: index.html
1.1.0/contributing/: index.html
1.1.0/conventional-commits/: index.html
1.1.0/migration/: index.html
1.1.0/release-notes/: index.html
1.1.0/search/: search_index.json
1.1.1/: 404.html  index.html  sitemap.xml
1.1.1/architecture/: index.html
1.1.1/compatibility/: index.html  index.ipynb  results_table.html
1.1.1/contributing/: index.html
1.1.1/conventional-commits/: index.html
1.1.1/migration/: index.html
1.1.1/release-notes/: index.html
1.1.1/search/: search_index.json
1.1.2/: 404.html  index.html  sitemap.xml
1.1.2/architecture/: index.html
1.1.2/compatibility/: compatible_datasets.csv  index.html
1.1.2/contributing/: index.html
1.1.2/conventional-commits/: index.html
1.1.2/migration/: index.html
1.1.2/release-notes/: index.html
1.1.2/search/: search_index.json
design/: 2026-02-19-backend-path-routing.md
dev/: 404.html  index.html  sitemap.xml
dev-docs/plans/: 2026-07-01-001-refactor-compatibility-report-update-plan.md
dev-docs/specs/: fix-timeseries-query-param-duplication.md
dev/architecture/: index.html
dev/compatibility/: index.html
dev/contributing/: index.html
dev/conventional-commits/: index.html
dev/migration/: index.html
dev/release-notes/: index.html
dev/search/: search_index.json
docs/: architecture.md  benchmark_analysis.py  conventional-commits.md  migration.md  mkdocs.yml  time_series_performance_benchmarks.ipynb
docs-update-endpoint/: 404.html  index.html  sitemap.xml
docs-update-endpoint/architecture/: index.html
docs-update-endpoint/compatibility/: index.html
docs-update-endpoint/contributing/: index.html
docs-update-endpoint/migration/: index.html
docs-update-endpoint/release-notes/: index.html
docs-update-endpoint/search/: search_index.json
docs/api/: compatibility_api_example.ipynb  ecco_sea_ice_velocity_example.ipynb  rasterio_backend_example.ipynb  sel_parameter_example.ipynb  statistics_api_example.ipynb  tiling_api_xarray_backend_example.ipynb  time_series_api_limits.ipynb  time_series_example.ipynb  visualizing_orbital_swath_data.ipynb
docs/benchmarking/: hls_tiling.ipynb  stats.ipynb  tiles.ipynb
docs/compatibility/: generate_table.py  index.ipynb  plotting.py  report.ipynb  reporting.py  tiling_results-11-22-2025.parquet  tiling_results-20260630.parquet  tool.ipynb
docs/datasets/: hls_tiling.ipynb
docs/deployment/: time_series_api_limits.ipynb
docs/examples/: ecco_sea_ice_velocity_example.ipynb  hls-ndvi-cloud-mask.ipynb  rasterio_backend_example.ipynb  time_series_example.ipynb  xarray_backend_example.ipynb
docs/src/: API.md
feat-reorg-documentation/: 404.html  index.html  sitemap.xml
feat-restructure/: 404.html  index.html  sitemap.xml
fix-time-series-duplicate-params/: 404.html  index.html  sitemap.xml
infrastructure/aws/: cdk.json  (+3 more)
scripts/: test-cdk-synth.sh  write-secrets.py
tests/: conftest.py  httpcore2_vcr_stubs.py  test_app.py  test_backend.py  test_compatibility.py  test_compatibility_reporting.py  test_dependencies.py  test_expression.py  test_factory.py  test_hls_benchmark.py  test_legacy.py  test_models.py  test_query.py  test_rasterio_backend.py  test_reader.py  test_timeseries.py  test_timeseries_benchmark.py  test_timeseries_extension.py  test_utils.py  test_xarray_backend.py
(+557 files in other folders)
