[project]
name = "titiler.cmr"
description = "Connect Common Metadata Repository (CMR) and TiTiler."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Aimee Barciauskas", email = "aimee@developmentseed.com"},
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
keywords = [
    "TiTiler",
    "NASA CMR",
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "titiler.core>=0.18.0,<0.19",
    "titiler.mosaic>=0.18.0,<0.19",
    "cftime~=1.6.4",
    "ciso8601~=2.3",
    "earthaccess~=0.11.0",
    "fsspec~=2024.9.0",
    "h5netcdf~=1.1.0",
    "orjson~=3.10.7",
    "pydantic-settings~=2.0",
    "pydantic>=2.4,<3.0",
    "rio_tiler[s3]>=6.4.0,<7.0",
    "rioxarray~=0.13.4",
    "s3fs~=2024.9.0",
    "xarray~=2024.9.0",
    "geojson-pydantic>=1.1.1",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "jupyterlab>=4.2.5",
    "httpx",
    "folium",
    "pytest-recording>=0.13.2",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
]

[project.urls]
Homepage = 'https://developmentseed.org/titiler-cmr/'
Documentation = "https://developmentseed.org/titiler-cmr/"
Issues = "https://github.com/developmentseed/titiler-cmr/issues"
Source = "https://github.com/developmentseed/titiler-cmr"
Changelog = "https://developmentseed.org/titiler-cmr/release-notes/"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
includes = ["titiler/cmr"]
excludes = ["tests/", "**/.mypy_cache", "**/.DS_Store"]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
known_first_party = ["titiler"]
known_third_party = [
    "rasterio",
    "morecantile",
    "rio_tiler",
    "cogeo_mosaic",
    "geojson_pydantic",
]
default_section = "THIRDPARTY"

[tool.ruff]
select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # flake8
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
]

[tool.mypy]
no_implicit_optional = true
strict_optional = true
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
markers = "vcr: records network activity"


